[workspace]
members = ["core", "infra", "infra-storage-file", "http-core", "http-app"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
actix-files = "0.6"
actix-multipart = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = { version = "4", default-features = false, features = ["macros"] }
anyhow = { version = "1" }
async-trait = { version = "0" }
chrono = "0.4"
env_logger = "0"
futures = "0"
kubetsu = { version = "0.2", features = ["serde", "sqlx-mysql", "fake"]}
lazy_static = { version = "1" }
log = "0.4"
num-traits = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = { version = "0.4" }
sqlx = { version = "0.7", default-features = false, features = ["macros", "runtime-tokio", "tls-rustls", "mysql", "chrono", "bigdecimal"] }
thiserror = { version = "1" }
tokio = { version = "1", features = ["fs", "process", "macros"] }
ulid = { version = "1" }
bytes = "1"
bcrypt = "0"
