[package]
name = "isucholar-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
test = ["mockall"]

[dependencies]
sqlx.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
num-traits.workspace = true
futures.workspace = true
tokio.workspace = true
lazy_static.workspace = true
ulid.workspace = true

mockall = { version = "0.11", optional = true }

[dev-dependencies]
mockall = { version = "0.11" }
