[package]
name = "isucholar-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
test = ["mockall"]

[dependencies]
bytes.workspace = true
sqlx.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
num-traits.workspace = true
futures.workspace = true
tokio.workspace = true
lazy_static.workspace = true
ulid.workspace = true
bcrypt.workspace = true

mockall = { version = "0.12", optional = true }
rand    = { version = "0.8" }
fake    = { version = "2.5", features=["derive"] }
