[package]
name = "isucholar-http-app"
version = "0.1.0"
edition = "2021"

[dependencies]
isucholar-core = { path = "../core/" }
isucholar-infra = { path = "../infra/" }
isucholar-http-core = { path = "../http-core/" }

env_logger = "0.9"
listenfd = "0.3"
serde_urlencoded = "0.7"

actix-files.workspace = true
actix-multipart.workspace = true
actix-session.workspace = true
actix-web.workspace = true
anyhow.workspace = true
futures.workspace = true
lazy_static.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
isucholar-core = { path = "../core/", features = ["test"] }
