[package]
name = "isucholar-infra-storage-file"
version = "0.1.0"
edition = "2021"

[dependencies]
isucholar-core = { path = "../core/" }

bytes.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
serde_json.workspace = true

[dev-dependencies]
isucholar-core = { path = "../core/", features = ["test"] }
