[package]
name = "isucholar-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
isucholar-core = { path = "../core/" }
isucholar-infra-storage-file = { path = "../infra-storage-file/" }

sqlx.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
num-traits.workspace = true
futures.workspace = true
tokio.workspace = true
serde_json.workspace = true
bytes.workspace = true
num-bigint.workspace = true

[dev-dependencies]
isucholar-core = { path = "../core/", features = ["test"] }
fake    = { version = "2" }
