[package]
name = "isucholar"
version = "0.1.0"
edition = "2021"

[dependencies]
isucholar-core = { path = "../isucholar-core/" }

actix-files = "0.6.0-beta.7"
actix-multipart = "0.4.0-beta.6"
actix-session = "0.5.0-beta.2"
actix-web = { version = "4.0.0-beta.9", default-features = false, features = ["macros"] }
bcrypt = "0.10"
chrono = "0.4"
env_logger = "0.9"
lazy_static = "1"
listenfd = "0.3"
log = "0.4"
mime = "0.3"
serde_urlencoded = "0.7"
ulid = "0.4"
sqlx.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
num-traits.workspace = true
futures.workspace = true
tokio.workspace = true

[dev-dependencies]
isucholar-core = { path = "../isucholar-core/", features = ["test"] }
